adding media queries

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             </header>
 
             <div id="main-container" class="container">
-                <section class="main-section">
+                <section class="main-section" id="thisBox">
                     <h1>About Me</h1>
 
                     <img src="assets/images/gpaw.jpg" class="auth-image" alt="This is my cat">
