Trying some of the CSS I found in the narrow jumbotron example for responsive media queries

--- a/portfolio.html
+++ b/portfolio.html
@@ -11,7 +11,7 @@
     
         <header id="masthead">
                 <div class="container">
-                  <a href="index.html" id="logo">Your Name</a>
+                  <a href="index.html" id="logo">Patrick</a>
                     <nav>
                         <a href="index.html">About</a>
                         <a href="portfolio.html">Portfolio</a>
@@ -62,7 +62,7 @@
 
         <footer>
             <div class="container">
-                Copyright &copy;, but that's just like, your opinion man. 
+               <h3>Copyright &copy;, but that's just like, your opinion man. </h3>
             </div>
         </footer>
      
